--- a/src/web/css/shared.css
+++ b/src/web/css/shared.css
@@ -209,6 +209,7 @@ nav a, nav button {
 }
 
 nav > ul {
+  display: flex;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -295,8 +296,7 @@ nav > ul ul a, nav > ul ul button {
   width: 60px;
 }
 
-li.lhs > div,
-li.rhs > div {
+li.topTier > div {
   float: none;
 }
 
@@ -378,6 +378,7 @@ li.rhs > div {
   float: right;
 }
 
+
 h3 {
   font-size: 16pt;
   font-weight: bold;
@@ -448,6 +449,10 @@ code {
 .copy-link {
   text-decoration: none;
   padding-left: 3px;
+}
+
+.flexpushright { /* used for the first flex item that's pushed right */
+  margin-left: auto;
 }
 
 #run-dropdown-content sup {
